[gd_scene load_steps=34 format=2]

[ext_resource path="res://ElementPlaceholder.png" type="Texture" id=1]
[ext_resource path="res://p1coinflip.png" type="Texture" id=2]
[ext_resource path="res://p2coinflip.png" type="Texture" id=3]
[ext_resource path="res://fireatk.png" type="Texture" id=4]
[ext_resource path="res://firedef.png" type="Texture" id=5]
[ext_resource path="res://BattleDraw.gd" type="Script" id=6]
[ext_resource path="res://ff-forward.tres" type="DynamicFont" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Coinflip"
tracks/0/type = "bezier"
tracks/0/path = NodePath("coinflip:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("coinflip:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -32, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=26]
resource_name = "DrawStart"
length = 2.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("DRAW:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("DRAW:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -31, -0.25, 0, 0.25, 0, 56, -0.25, 0, 0.25, 0, 56, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 1.5, 2 )
}

[sub_resource type="Animation" id=2]
resource_name = "ElementCompare"
length = 4.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("CompareControl/P1Type:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CompareControl/P1Type:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 128, -0.25, 0, 0.25, 0, 48, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CompareControl/P2Type:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CompareControl/P2Type:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 128, -0.25, 0, 0.25, 0, 48, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CompareControl/Compare:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CompareControl/Compare:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 128, -0.25, 0, 0.25, 0, 48, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.8, 2 )
}

[sub_resource type="Animation" id=3]
resource_name = "StatsMove"
length = 4.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("CompareControl/P1Stats:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 11, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CompareControl/P1Stats:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -80, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CompareControl/P2Stats:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 11, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.5, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CompareControl/P2Stats:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -80, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("CompareControl/P1Stats/P1Seperate:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CompareControl/P1Stats/P1Combine:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("CompareControl/P1Stats/P1Combine:custom_constants/separation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}
tracks/7/type = "value"
tracks/7/path = NodePath("CompareControl/P2Stats/P2Seperate:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CompareControl/P2Stats/P2Combine:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("CompareControl/P2Stats/P2Combine:custom_constants/separation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 16, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("CompareControl/Compare2:rect_position:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("CompareControl/Compare2:rect_position:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 161, -0.25, 0, 0.25, 0, 81, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.9, 2.5 )
}

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "p1win",
"speed": 6.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "p2win",
"speed": 5.0
} ]

[sub_resource type="Theme" id=25]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -768.0
margin_bottom = -472.0
rect_min_size = Vector2( 256, 128 )
rect_clip_content = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DRAW" type="Label" parent="."]
margin_left = 64.0
margin_top = -31.0
margin_right = 192.0
margin_bottom = -15.0
custom_fonts/font = ExtResource( 7 )
text = "DRAW!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Coinflip = SubResource( 1 )
anims/DrawStart = SubResource( 26 )
anims/ElementCompare = SubResource( 2 )
anims/StatsMove = SubResource( 3 )

[node name="coinflip" type="AnimatedSprite" parent="."]
position = Vector2( 128, -32 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 24 )
animation = "p1win"

[node name="CompareControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="P1Type" type="TextureRect" parent="CompareControl"]
margin_left = 64.0
margin_top = 128.0
margin_right = 96.0
margin_bottom = 160.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2Type" type="TextureRect" parent="CompareControl"]
margin_left = 160.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 160.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compare" type="Label" parent="CompareControl"]
margin_left = 104.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 144.0
rect_scale = Vector2( 2, 2 )
size_flags_vertical = 12
custom_fonts/font = ExtResource( 7 )
text = "="
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compare2" type="Label" parent="CompareControl"]
margin_left = 104.0
margin_top = 161.0
margin_right = 128.0
margin_bottom = 177.0
rect_scale = Vector2( 2, 2 )
size_flags_vertical = 12
custom_fonts/font = ExtResource( 7 )
text = "="
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Stats" type="Container" parent="CompareControl"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Seperate" type="HBoxContainer" parent="CompareControl/P1Stats"]
margin_left = 48.0
margin_top = 168.0
margin_right = 112.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( -168, -80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atk" type="HBoxContainer" parent="CompareControl/P1Stats/P1Seperate"]
margin_right = 26.0
margin_bottom = 16.0
theme = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CompareControl/P1Stats/P1Seperate/Atk"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="CompareControl/P1Stats/P1Seperate/Atk"]
margin_left = 20.0
margin_top = 5.0
margin_right = 26.0
margin_bottom = 16.0
size_flags_vertical = 12
custom_fonts/font = ExtResource( 7 )
text = "0"

[node name="Def" type="HBoxContainer" parent="CompareControl/P1Stats/P1Seperate"]
margin_left = 30.0
margin_right = 56.0
margin_bottom = 16.0
theme = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CompareControl/P1Stats/P1Seperate/Def"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="CompareControl/P1Stats/P1Seperate/Def"]
margin_left = 20.0
margin_top = 5.0
margin_right = 26.0
margin_bottom = 16.0
size_flags_vertical = 12
custom_fonts/font = ExtResource( 7 )
text = "0"

[node name="P1Combine" type="HBoxContainer" parent="CompareControl/P1Stats"]
visible = false
margin_left = 48.0
margin_top = 168.0
margin_right = 112.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( -168, -80 )
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atk" type="HBoxContainer" parent="CompareControl/P1Stats/P1Combine"]
margin_right = 16.0
margin_bottom = 16.0
theme = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CompareControl/P1Stats/P1Combine/Atk"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="Def" type="HBoxContainer" parent="CompareControl/P1Stats/P1Combine"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 16.0
theme = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CompareControl/P1Stats/P1Combine/Def"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="CompareControl/P1Stats/P1Combine/Def"]
margin_left = 20.0
margin_top = 1.0
margin_right = 28.0
margin_bottom = 15.0
size_flags_vertical = 12
custom_fonts/font = ExtResource( 7 )
text = "0"

[node name="P2Stats" type="Container" parent="CompareControl"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2Seperate" type="HBoxContainer" parent="CompareControl/P2Stats"]
margin_left = 144.0
margin_top = 168.0
margin_right = 208.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( -168, -80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atk" type="HBoxContainer" parent="CompareControl/P2Stats/P2Seperate"]
margin_right = 26.0
margin_bottom = 16.0
theme = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CompareControl/P2Stats/P2Seperate/Atk"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="CompareControl/P2Stats/P2Seperate/Atk"]
margin_left = 20.0
margin_top = 5.0
margin_right = 26.0
margin_bottom = 16.0
size_flags_vertical = 12
custom_fonts/font = ExtResource( 7 )
text = "0"

[node name="Def" type="HBoxContainer" parent="CompareControl/P2Stats/P2Seperate"]
margin_left = 30.0
margin_right = 56.0
margin_bottom = 16.0
theme = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CompareControl/P2Stats/P2Seperate/Def"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="CompareControl/P2Stats/P2Seperate/Def"]
margin_left = 20.0
margin_top = 5.0
margin_right = 26.0
margin_bottom = 16.0
size_flags_vertical = 12
custom_fonts/font = ExtResource( 7 )
text = "0"

[node name="P2Combine" type="HBoxContainer" parent="CompareControl/P2Stats"]
visible = false
margin_left = 144.0
margin_top = 168.0
margin_right = 208.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( -168, -80 )
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atk" type="HBoxContainer" parent="CompareControl/P2Stats/P2Combine"]
margin_right = 16.0
margin_bottom = 16.0
theme = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CompareControl/P2Stats/P2Combine/Atk"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 4 )

[node name="Def" type="HBoxContainer" parent="CompareControl/P2Stats/P2Combine"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 16.0
theme = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CompareControl/P2Stats/P2Combine/Def"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="CompareControl/P2Stats/P2Combine/Def"]
margin_left = 20.0
margin_top = 1.0
margin_right = 28.0
margin_bottom = 15.0
size_flags_vertical = 12
custom_fonts/font = ExtResource( 7 )
text = "0"
